Add enum-based buffer allocation with optimized read path - Introduce BufferMode enum: HEAP, DIRECT_BUFFER, MEMORY_SEGMENT - Convert TDSPacket.payload from byte[] to ByteBuffer for zero-copy reads - Implement ByteBuffer.read() in TDSChannel for efficient I/O - Update TDSReader methods to use native ByteBuffer operations - Add automatic SSL-aware fallback (MEMORY_SEGMENT -> DIRECT_BUFFER) - Support legacy mssql.jdbc.useMemorySegment property